--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&family=Open+Sans:wght@300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;700&family=Roboto:wght@300;400;500;700&family=Tinos&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&&display=swap" rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -42,10 +42,6 @@
         padding: 0;
         box-sizing: border-box;
         font-family: 'Lato', sans-serif;
-        font-family: 'Open Sans', sans-serif;
-        font-family: 'Poppins', sans-serif;
-        font-family: 'Roboto', sans-serif;
-        font-family: 'Tinos', serif;
       }
       body {
         background-color: #f5f5f5;
