--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,13 @@
         background-size: cover;
         background-repeat: no-repeat;
       }
+
+      
+      @media only screen and (max-width: 600px) {
+        html {
+          font-size: 50%;
+        }
+      }
     </style>
   </head>
   <body>
